--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         </button> 
                     </div>    
                     <div class="collapse navbar-collapse justify-content-center" id="menu">
-                        <ul class="navbar-nav justify-content-center mb-2 mb-lg-0"> <!--saqué acá el ms-auto para centar pero no anduvo-->
+                        <ul class="navbar-nav justify-content-center mb-2 mb-lg-0">
                           <li class="nav-item">
                               <a href="#datos_personales">Datos Personales</a>
                           </li>
@@ -61,14 +61,14 @@
 
     <section class="cuerpo">
         <div class="row">
-            <div class="col-sm-1 col-md-2" id="lateral_izq">
+            <div class="col-sm-1 col-md-2 lateral_izq">
                 <span id="botonTema" class="fixed-bottom">
                     <i id="luna" class="fa-solid fa-moon" ></i>
                     <i id="sol" class="fa-solid fa-sun"></i>
                 </span>
             </div>
 
-            <div class="col-sm-10 col-md-8" id="cuerpo_centro">
+            <div class="col-sm-10 col-md-8 cuerpo_centro">
                 <h3 id="datos_personales"><b>Datos Personales </b><i class="fa-solid fa-address-card"></i></h3>
                     <ul>
                         <li id="nombre">Nombre: </li>
@@ -106,7 +106,7 @@
                     </a>     
             </div>
 
-            <div class="col-sm-1 col-md-2" id="lateral_der">
+            <div class="col-sm-1 col-md-2 lateral_der">
                 
             </div>
 
@@ -114,23 +114,17 @@
     </section>
     
     <footer>
-        <div id="pie" class="fixed-bottom">
+        <div class="fixed-bottom pie">
             <div class="row">
                 <div class="col text-center">
                     <span>desarrollado por <b>CNS</b><br>
                         <a href="https://github.com/CNSarg?tab=repositories" target="_blank"><i class="fa-brands fa-github"></i></a>
-                        <a href="mailto:sch.cristian.n@gmail.com"><i class="fa-solid fa-envelope"></i></a> <!--AGREGAR LINKS!!-->
-                        <!-- como proyecto final del curso "primeros pasos en front-end" de Argentina Programa -->
+                        <a href="mailto:sch.cristian.n@gmail.com"><i class="fa-solid fa-envelope"></i></a>
                     </span>
                 </div>
             </div>
         </div>
     </footer>
-
-
-
-
-
 
     <script src="index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
